tests/baselines/reference/typeResolution.errors.txt
typeResolution.ts(7,37): error TS2454: Variable 'a1' is used before being assigned.
typeResolution.ts(8,51): error TS2454: Variable 'a2' is used before being assigned.
typeResolution.ts(9,62): error TS2454: Variable 'a3' is used before being assigned.
typeResolution.ts(10,78): error TS2454: Variable 'a4' is used before being assigned.
typeResolution.ts(13,37): error TS2454: Variable 'b1' is used before being assigned.
typeResolution.ts(14,78): error TS2454: Variable 'b2' is used before being assigned.
typeResolution.ts(17,78): error TS2454: Variable 'c1' is used before being assigned.
typeResolution.ts(20,41): error TS2454: Variable 'd1' is used before being assigned.
typeResolution.ts(21,55): error TS2454: Variable 'd2' is used before being assigned.
typeResolution.ts(29,37): error TS2454: Variable 'a1' is used before being assigned.
typeResolution.ts(30,51): error TS2454: Variable 'a2' is used before being assigned.
typeResolution.ts(31,62): error TS2454: Variable 'a3' is used before being assigned.
typeResolution.ts(32,78): error TS2454: Variable 'a4' is used before being assigned.
typeResolution.ts(35,37): error TS2454: Variable 'b1' is used before being assigned.
typeResolution.ts(36,78): error TS2454: Variable 'b2' is used before being assigned.
typeResolution.ts(39,78): error TS2454: Variable 'c1' is used before being assigned.
typeResolution.ts(40,64): error TS2454: Variable 'c2' is used before being assigned.
typeResolution.ts(43,41): error TS2454: Variable 'd1' is used before being assigned.
typeResolution.ts(44,55): error TS2454: Variable 'd2' is used before being assigned.
typeResolution.ts(52,82): error TS2454: Variable 'a4' is used before being assigned.
typeResolution.ts(53,82): error TS2454: Variable 'c1' is used before being assigned.
typeResolution.ts(54,45): error TS2454: Variable 'd1' is used before being assigned.
typeResolution.ts(55,68): error TS2454: Variable 'c2' is used before being assigned.
typeResolution.ts(65,51): error TS2454: Variable 'a2' is used before being assigned.
typeResolution.ts(66,62): error TS2454: Variable 'a3' is used before being assigned.
typeResolution.ts(67,78): error TS2454: Variable 'a4' is used before being assigned.
typeResolution.ts(70,55): error TS2454: Variable 'd2' is used before being assigned.


==== typeResolution.ts (27 errors) ====
    export module TopLevelModule1 {
        export module SubModule1 {
            export module SubSubModule1 {
                export class ClassA {
                    public AisIn1_1_1() {
                        // Try all qualified names of this type
                        var a1: ClassA; a1.AisIn1_1_1();
                                        ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                        var a2: SubSubModule1.ClassA; a2.AisIn1_1_1();
                                                      ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                        var a3: SubModule1.SubSubModule1.ClassA; a3.AisIn1_1_1();
                                                                 ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                        var a4: TopLevelModule1.SubModule1.SubSubModule1.ClassA; a4.AisIn1_1_1();
                                                                                 ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                        
                        // Two variants of qualifying a peer type
                        var b1: ClassB; b1.BisIn1_1_1();
                                        ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                        var b2: TopLevelModule1.SubModule1.SubSubModule1.ClassB; b2.BisIn1_1_1();
                                                                                 ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                        
                        // Type only accessible from the root
                        var c1: TopLevelModule1.SubModule2.SubSubModule2.ClassA; c1.AisIn1_2_2();
                                                                                 ~~
!!! error TS2454: Variable 'c1' is used before being assigned.
                        
                        // Interface reference
                        var d1: InterfaceX; d1.XisIn1_1_1();
                                            ~~
!!! error TS2454: Variable 'd1' is used before being assigned.
                        var d2: SubSubModule1.InterfaceX; d2.XisIn1_1_1();
                                                          ~~
!!! error TS2454: Variable 'd2' is used before being assigned.
                    }
                }
                export class ClassB {
                    public BisIn1_1_1() {
                        /** Exactly the same as above in AisIn1_1_1 **/
                        
                        // Try all qualified names of this type
                        var a1: ClassA; a1.AisIn1_1_1();
                                        ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                        var a2: SubSubModule1.ClassA; a2.AisIn1_1_1();
                                                      ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                        var a3: SubModule1.SubSubModule1.ClassA; a3.AisIn1_1_1();
                                                                 ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                        var a4: TopLevelModule1.SubModule1.SubSubModule1.ClassA; a4.AisIn1_1_1();
                                                                                 ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                        
                        // Two variants of qualifying a peer type
                        var b1: ClassB; b1.BisIn1_1_1();
                                        ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                        var b2: TopLevelModule1.SubModule1.SubSubModule1.ClassB; b2.BisIn1_1_1();
                                                                                 ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                        
                        // Type only accessible from the root
                        var c1: TopLevelModule1.SubModule2.SubSubModule2.ClassA; c1.AisIn1_2_2();
                                                                                 ~~
!!! error TS2454: Variable 'c1' is used before being assigned.
                        var c2: TopLevelModule2.SubModule3.ClassA; c2.AisIn2_3();
                                                                   ~~
!!! error TS2454: Variable 'c2' is used before being assigned.
                        
                        // Interface reference
                        var d1: InterfaceX; d1.XisIn1_1_1();
                                            ~~
!!! error TS2454: Variable 'd1' is used before being assigned.
                        var d2: SubSubModule1.InterfaceX; d2.XisIn1_1_1();
                                                          ~~
!!! error TS2454: Variable 'd2' is used before being assigned.
                    }
                }
                export interface InterfaceX { XisIn1_1_1(); }
                class NonExportedClassQ {
                    constructor() {
                        function QQ() {
                            /* Sampling of stuff from AisIn1_1_1 */
                            var a4: TopLevelModule1.SubModule1.SubSubModule1.ClassA; a4.AisIn1_1_1();
                                                                                     ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                            var c1: TopLevelModule1.SubModule2.SubSubModule2.ClassA; c1.AisIn1_2_2();
                                                                                     ~~
!!! error TS2454: Variable 'c1' is used before being assigned.
                            var d1: InterfaceX; d1.XisIn1_1_1();
                                                ~~
!!! error TS2454: Variable 'd1' is used before being assigned.
                            var c2: TopLevelModule2.SubModule3.ClassA; c2.AisIn2_3();
                                                                       ~~
!!! error TS2454: Variable 'c2' is used before being assigned.
                        }
                    }
                }
            }
            
            // Should have no effect on S1.SS1.ClassA above because it is not exported
            class ClassA {
                constructor() {
                    function AA() {
                        var a2: SubSubModule1.ClassA; a2.AisIn1_1_1();
                                                      ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                        var a3: SubModule1.SubSubModule1.ClassA; a3.AisIn1_1_1();
                                                                 ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                        var a4: TopLevelModule1.SubModule1.SubSubModule1.ClassA; a4.AisIn1_1_1();
                                                                                 ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                        
                        // Interface reference
                        var d2: SubSubModule1.InterfaceX; d2.XisIn1_1_1();
                                                          ~~
!!! error TS2454: Variable 'd2' is used before being assigned.
                    }
                }
            }
        }
    
        export module SubModule2 {
            export module SubSubModule2 {
                // No code here since these are the mirror of the above calls
                export class ClassA { public AisIn1_2_2() { } }
                export class ClassB { public BisIn1_2_2() { } }
                export class ClassC { public CisIn1_2_2() { } }
                export interface InterfaceY { YisIn1_2_2(); }
                interface NonExportedInterfaceQ { }
            }
            
            export interface InterfaceY { YisIn1_2(); }
        }
        
        class ClassA {
            public AisIn1() { }
        }
    
        interface InterfaceY {
            YisIn1();
        }
        
        module NotExportedModule {
            export class ClassA { }
        }
    }
    
    module TopLevelModule2 {
        export module SubModule3 {
            export class ClassA {
                public AisIn2_3() { }
            }
        }
    }
    
    